Fixing style and spacing

--- a/css/less-style.css
+++ b/css/less-style.css
@@ -348,7 +348,7 @@ h2 > .examples {
 .example_list > li:hover {
   text-decoration: none;
   color: rgb(255,0,0);
-  cursor: hand;
+  cursor: pointer;
 }
 
 .example_list > li a {
@@ -366,6 +366,7 @@ h2 > .examples {
   list-style-type: none;
   line-height: 15px;
   width: 50px;
+  cursor: pointer;
 }
 
 .function_list > li.column1 {
